[project]
name = "discogs"
version = "0.1.0"
description = "brazilian music analysis using Discogs data"
authors = [
    {name = "Vinicius Princiotti",email = "vinicius.princiotti@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb (>=1.2.2,<2.0.0)",
    "polars (>=1.27.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
